plugins/kotlin/idea/tests/testData/checker/codeFragments/classHeaderWithTypeArguments.kt.fragment.k2
this.foo(<error descr="[ARGUMENT_TYPE_MISMATCH]">"a"</error>)